[package]
name = "contract"
version = "0.1.0"
edition = "2021"
# See more project of me at https://github.com/willser
authors = ["will"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "3.1.0"

[lib]
crate-type = ["cdylib", "rlib"]


[dev-dependencies]
near-primitives-core="0.4.0"
#borsh = "0.8.2"